Hibernate, JPA annotations