@@ -46,12 +46,12 @@ public class O1 {
 
     @Given("the last journey of the container list is ended")
     public void the_last_journey_of_the_container_list_is_ended() {
-        assertTrue(holder.getFirstContainer().getJourneyList().getLast().isEnded());
+        assertTrue(holder.getFirstContainer().getJourneyList().get(holder.getFirstContainer().getJourneyList().size() - 1).isEnded());
     }
 
     @Given("the last journey of the container list is not ended")
     public void the_last_journey_of_the_container_list_is_not_ended() {
-        assertFalse(holder.getFirstContainer().getJourneyList().getLast().isEnded());
+        assertFalse(holder.getFirstContainer().getJourneyList().get(holder.getFirstContainer().getJourneyList().size() - 1).isEnded());
     }
 
     @Given("the journey has started at {int}:{int} {int}\\/{int}\\/{int}")
